# g4s

./: README.md
patent/: CMakeLists.txt  example.cc  run1.mac
patent/analysis/: draw.cpp
patent/include/: ActionInitialization.hh  Constants.hh  DataStructure.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RootIO.hh  RunAction.hh  SteppingAction.hh  TargetHit.hh  TargetSD.hh  TrackingAction.hh
patent/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RootIO.cc  RunAction.cc  SteppingAction.cc  TargetHit.cc  TargetSD.cc  TrackingAction.cc
ppac/: example.cc  vis.mac
ppac/include/: ActionInitialization.hh  CathodePixel.hh  Constants.hh  DataStructure.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RootIO.hh  RunAction.hh  SteppingAction.hh  TargetHit.hh  TargetSD.hh  TrackingAction.hh
ppac/src/: ActionInitialization.cc  CathodePixel.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RootIO.cc  RunAction.cc  SteppingAction.cc  TargetHit.cc  TargetSD.cc  TrackingAction.cc
